--- a/frontend-react/src/App.css
+++ b/frontend-react/src/App.css
@@ -1,38 +1,101 @@
-.App {
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+form input,
+form select,
+form button {
+  margin-bottom: 12px;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+form button {
+  background: #ac34db; 
+  color: white;
+  font-family: 'Lato', sans-serif; 
+  font-size: inherit;
+  cursor: pointer;
+  padding: 12px 22px; 
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  display: inline-block;
+  margin: 15px auto;
+  transition: all 0.3s ease;
+  border: none;
+  border-radius: 4px; 
+  width: 100%;
+}
+
+form button:before {
+  content: '\002B'; /* Ícone de "+" */
+  font-family: 'FontAwesome';
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+
+form button:hover {
+  background: #29b9a1; 
+}
+
+form button:active {
+  background: #2980b9;
+  top: 2px;
+}
+
+h2 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 20px; 
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+li {
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  width: 20%; 
+  text-align: center;
+}
+
+button {
+  font-size: 16px;
+  background-color: #f44336;
   color: white;
+  padding: 10px 12px;
+  border: none;
+  border-radius: 4px;
+  margin: 2%;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: #cf2812;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.no-tasks-message {
+  margin-top: 20px;
+  text-align: center;
+  font-style: italic;
+  color: #666;
 }
